refactor: 全面安全加固与代码质量优化
- 🔐 集成 Spring Security + JWT 认证体系
- 🔑 BCrypt 密码加密存储，替换明文存储
- 🛡️ 管理端 API 角色鉴权（ROLE_ADMIN）
- 🆔 替换所有 Controller 硬编码 userId 为 SecurityUtil
- 🐛 修复 UserServiceImpl nickname→email 赋值 bug
- 🐛 修复 AdminOrderController 全表查询性能问题
- 📦 所有 Entity/DTO 改用 Lombok @Data 简化
- 🔧 统一为构造器注入，修复 javax/jakarta 混用
- 🧪 添加核心服务 JUnit 5 单元测试
- 📝 重写 README，更新安全说明与 API 文档